[project]
name = "comfyui-hyper-tile-upscaler"
version = "0.1.0"
description = "Single-click tiled generative upscale helpers for ComfyUI"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "transformers>=4.44.0",
    "accelerate>=0.33.0",
    "huggingface-hub>=0.24.0",
    "sentencepiece>=0.2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"